--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,6 @@ spring:
   application:
     name: api-liq-rota
   profiles:
-    active: hmg
+    active: ${PROFILE_ACTIVE:hmg}
   jpa:
     open-in-view: false
