--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -5,12 +5,25 @@ spring:
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
+    hikari:
+      pool-name: LiqRotaPool
+      maximum-pool-size: 10
+      minimum-idle: 2
+      idle-timeout: 300000
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      auto-commit: true
+      leak-detection-threshold: 0
+
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
     hibernate.ddl-auto: none
+
+  threads:
+    virtual:
+      enabled: true
 
 token:
   secret: ${TOKEN_SECRET}
